--- a/packages/web-components/src/components/Tree/styles.scss
+++ b/packages/web-components/src/components/Tree/styles.scss
@@ -264,20 +264,20 @@
 
 .tree-item-focused {
   outline: none;
-  background: var(--bg-control-flat-medium);
+  background: var(--color-control-bg);
 
   &::before {
     content: "";
     position: absolute;
     inset: 0 auto 0 0;
     width: 3px;
-    background: var(--bg-support-aldebaran);
+    background: var(--color-intent-primary-bg);
     pointer-events: none;
   }
 }
 
 .tree-section-focused {
   outline: none;
-  background: var(--bg-control-flat-medium);
-  box-shadow: inset 3px 0 0 var(--bg-support-aldebaran);
+  background: var(--color-control-bg);
+  box-shadow: inset 3px 0 0 var(--color-intent-primary-bg);
 }
